--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "pusher": "^5.0.0",
     "socket.io": "^4.3.2"
