--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "pusher": "^5.0.0",
-    "socket.io": "^4.3.2"
+    "socket.io": "^4.3.2",
+    "websocket": "^1.0.34"
   }
 }
